Fix/hot fix (#81)
* very hot fix booking